Updated article: Echo #66

--- a/_posts/2017-03-13-echo-66.md
+++ b/_posts/2017-03-13-echo-66.md
@@ -20,13 +20,19 @@ As I mentioned, I have made some cool improvements to various parts of Sector Si
 
 Here's few of them:
 
-It is no longer possible to get parts that generate ether when the spaceship is hit by enemy projectiles.* 
-Now spaceship moves faster in secure regions.
-Now cities offer more items. This should increase a chance of getting a good offer.
-Visiting secure region no longer generates new missions.
-Fixed tutorial glitch.
-Side missions now have better rewards.
-Side missions now may give units as a reward.
+* It is no longer possible to get parts that generate ether when the spaceship is hit by enemy projectiles. 
+
+* Now spaceship moves faster in secure regions.
+
+* Now cities offer more items. This should increase a chance of getting a good offer.
+
+* Visiting secure region no longer generates new missions.
+
+* Fixed tutorial glitch.
+
+* Side missions now have better rewards.
+
+* Side missions now may give units as a reward.
 
 Now I will be working on new apocalypse and carrier abilities.
 If they will be done before the weekend, that's when I am going to release the new update!
